fix: settings bar was invisible

--- a/src/content.less
+++ b/src/content.less
@@ -238,6 +238,7 @@
       flex: 1;
       flex-direction: column;
       max-height: calc(100vh - 34px); // temporary fix for layout issue occurred since Chrome v76
+      min-height: 0; // make content shrinkable
 
       .meta-bar {
         position: relative;
